--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "^0.74.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
-    "react-native-web": "^0.19.12"
+    "react-native-web": "^0.19.12",
+    "tapp": "file:"
   },
   "devDependencies": {
     "@babel/core": "^7.25.7"
